--- a/src/main/webapp/css/ex02.html
+++ b/src/main/webapp/css/ex02.html
@@ -46,7 +46,7 @@
     <ul>
         <li>HTML 복습하기</li>
         <li style="color:red;">VS Code 설치하기</li>
-        <li style="color:red;">DB 프로젝트 정리하기</li>
+        <li style="color:red;">DB 프로젝트 정리하자</li>
         <li>밥먹기</li>
         <li>잠자기</li>
     </ul>
