--- a/src/main/webapp/css/ex03_selector.html
+++ b/src/main/webapp/css/ex03_selector.html
@@ -13,8 +13,8 @@
         /* p  { color : gray; }
         li { color : yellow; } */
 
-        /* h2#title{   color:orange;   }
-        li { color:greenyellow; } */
+        /* h2#title{   color:orange; } */
+        /* li { color:greenyellow; }   */
         li.item { color:greenyellow; }
 
     </style>
@@ -83,7 +83,6 @@
         5. 나머지 > 2~4를 조합 
 
         
-
     -->
 
     <!-- <h1 style="color:blue;">수업 일지</h1> 얘 잘 안쓴다. -->
