네이버뉴스 완

--- a/src/main/webapp/css/ex31.html
+++ b/src/main/webapp/css/ex31.html
@@ -167,18 +167,22 @@
     </div>  -->
     <!-- 마진이 안걸리는 케이스 > 인라인은 상하 마진을 가질 수 없나-->
 
-    
+     <!-- <div >
+        <img src="images/news_icon5.png"> 
+        <span>ddd</span>  
+    </div>
+    <hr>
     <div >
         <img src="images/news_icon5.png">
         <span style="position: absolute;"> ddd </span> 
-    </div>
+    </div> -->
 
     <!-- position: absolute; left right top 이런거 없으면 부모기준으로 자신의 위치 결정 -->
-    <div >
+    <!-- <div >
         <img src="images/news_icon5.png">
         <span style="position: absolute; left:0px; right:0px">ddd</span> 
       
-    </div>
+    </div> -->
       <!-- 해결하는 케이스 그럼 position: absolute;로 풀어버리면 인라인인데 블럭요소 처럼 되는가? -->
     <!-- <div >
         <img src="images/news_icon5.png" style="display:block">
