--- a/src/main/webapp/css/ex23_float.html
+++ b/src/main/webapp/css/ex23_float.html
@@ -60,7 +60,8 @@
     <img src="images/rect_icon03.png">
     <img src="images/rect_icon04.png">
     <img src="images/rect_icon05.png">
-
+    <!-- 부모요소는 자식들의 요소가 float 해버리면 그걸 알아차리지 못한다. 그래서 무의식적으로 자식들이 부모 영역으로 나감
+    그래서 width 를 의도적으로 지정하면 갠찬한긴 한데 넘어가면 overflow되버림 -->
     <!-- clear는 float의 성질을 제거한다. 빈 블록으로 float를 제거해버리면 
     한 라인을 차지한다. 그래서 다음 요소는 처음부터 시작되는 것이다. 개행을 시키는 느낌이다.  -->
     <!-- float의 성질 제거 > 빈 div 태그로 clear를 줘서 -->
