--- a/src/main/webapp/css/ex45_transform.html
+++ b/src/main/webapp/css/ex45_transform.html
@@ -24,6 +24,7 @@
             margin: 50px;
             margin-left: 300px;
             margin-top: 300px;
+            transition-duration: 0.5s;
         }
 
         #box1{
@@ -59,10 +60,12 @@
             transform: rotate(45deg);
         }
         #box3:hover {
-            transform-origin: 300px 0px ; 
+            transform-origin: -900px 0px ; 
             /*원점이 바깥으로 나가면 다루기가 힘들어진다. */
             transform: rotate(45deg);
         }
+
+    
     </style>
 </head>
 <body>
