--- a/src/main/webapp/javascript/ex26_event.html
+++ b/src/main/webapp/javascript/ex26_event.html
@@ -176,7 +176,7 @@
         function m10(btn) {
             // <input data-color="red">
             // data 뒤에 붙은데 key이다.이러면 3개 다 반환된다. 
-            // alert(btn.dataset['color']);
+            // alert(btn.dataset['color']); ★★★★★★★★★★★★★ dataset맵
             document.body.bgColor = btn.dataset['color'];
         }
         function m11() {
