--- a/src/main/webapp/javascript/question_js/question23.html
+++ b/src/main/webapp/javascript/question_js/question23.html
@@ -79,9 +79,9 @@
             list[i].onmousedown = function() {
                 // 클릭한 <td> ? 
                 if(event.buttons == 1){
-                    event.target.innerHTML = '<img src="images/rect_icon01.png">';
+                    event.target.innerHTML = '<img src="../images/rect_icon01.png">';
                 } else if (event.buttons == 2){
-                    event.target.innerHTML = '<img src="images/rect_icon02.png">';
+                    event.target.innerHTML = '<img src="../images/rect_icon02.png">';
                     
                 }
             };
