복습용 README.md 작성

--- a/src/main/webapp/css/ex01.html
+++ b/src/main/webapp/css/ex01.html
@@ -32,6 +32,8 @@
         요구사항] "안녕하세요." x 5번 출력
         추가사항] 글자색 > 파란색
         수정사항] 글자색 > 빨간색
+
+        ★ html에서 칼라변경은 font태그로 한다. 
     -->
 
     <p><font color="red">안녕하세요.</font></p>
