--- a/src/main/webapp/css/ex04_selector.html
+++ b/src/main/webapp/css/ex04_selector.html
@@ -20,7 +20,9 @@
         /* p, h2#title, li.item { text-decoration: underline; } */
         /*         
         h2#title{}
-        #title{}  앞에 생략하면 별표가 붙은 것과 동일하게 인식한다. 문서상에서 존재하는 모든 태그들 중에서 title아이디를 갖는걸 찾아주세요.  ★ #title{} = *#title{} 어차피 유일하니까
+        #title{}  앞에 생략하면 별표가 붙은 것과 동일하게 인식한다. 
+        문서상에서 존재하는 모든 태그들 중에서 title아이디를 갖는걸 찾아주세요.  
+        ★ #title{} = *#title{} 어차피 유일하니까
         *#title{} */
         #title { color : orange; }
 
