--- a/src/main/webapp/javascript/ex05.html
+++ b/src/main/webapp/javascript/ex05.html
@@ -38,6 +38,7 @@
         function m2(name) {  // -----
             console.log('name', name);
             // 모든 매개변수를 자동으로 담는 배열이다. 
+            // ★ arguments 라는 내장 배열이 있다.
             console.log(arguments); // 에약어 > 내장 배열 
             console.log(arguments[0]);
             console.log(arguments[1]);
