--- a/src/main/webapp/javascript/question_js/question35.html
+++ b/src/main/webapp/javascript/question_js/question35.html
@@ -23,21 +23,33 @@
 <body>
     <!--  -->
     <h1>제목입니다.</h1>
-    <input type="text" id="txt1">
+    <input type="text" id="txt1" style="transform: translate(0px, 0px);">
     <hr>
     <h1>다른 내용입니다.</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem recusandae sunt doloribus libero, quis dolores provident eum voluptas facilis fugiat tempora soluta illum ipsa perferendis id exercitationem pariatur reiciendis quod!
+    </p>
+
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur laborum, voluptatum nostrum repellendus dolorem nobis tenetur tempore aspernatur voluptates deserunt quam assumenda impedit accusamus atque reiciendis, corrupti mollitia, earum sed.</p>
+
     <script>
         let txt1 = document.getElementById('txt1');
-        txt1.onkeydown = () => {
-            console.log(event.target.value);
-            document.body.style.margin = '0px';
-            document.body.style.left = '10px';
-        }
-        txt1.onkeyup = () => {
-            document.body.style.margin = '10px';
-            document.body.style.left = '0px';
-        }
 
+        let g = 1;
+        txt1.onkeydown = () => {
+
+            let move = [-5, 5, 0];
+
+            document.body.style.transform = "translate("+move[Math.floor(Math.random() * 3)]+"px, "+ move[Math.floor(Math.random()*3)]+"px)";
+
+            setTimeout(function() {
+                document.body.style.transform = "translate("+move[Math.floor(Math.random() * 3)]+"px, "+ move[Math.floor(Math.random()*3)]+"px)"
+            }, 5);
+
+            setTimeout(function(){
+                document.body.style.transform = "translate(0px, 0px);"
+            }, 20);
+
+    }
     </script>
 </body>
 </html>
