--- a/src/main/webapp/jquery/ex03_event.html
+++ b/src/main/webapp/jquery/ex03_event.html
@@ -78,6 +78,7 @@
         jQuery('#btn4').on('mouseover', function(){ 
         //  > 범용함수 이벤트 종류, 이벤트 핸들러 함수 
             event.target.style.backgroundColor = 'gold';
+            alert(1);
        });
 
     //    const obj = {
@@ -96,14 +97,16 @@
     // jQuery('#btn4').on(obj); 
 
     // 하나하나 따로 만들었던 스타일이 바뀐다. 
-    jQuery('#btn4').on({
-        mouseover: function() {
-            event.target.style.backgroundColor = 'gold';
-        },
-        mouseout : function() {
-            event.target.style.backgroundColor = 'white';
-        }
-    }); // 한꺼번에 이벤트가 있을 땐 한방에 처리를 한다. > 범용함수는 이게 가능하다. 모든 이벤트를 처리하는 공용함수디.
+    // jQuery('#btn4').on({
+    //     mouseover: function() {
+    //         event.target.style.backgroundColor = 'gold';
+    //     },
+    //     mouseout : function() {
+    //         alert(2);
+    //         event.target.style.backgroundColor = 'white';
+    //     }
+    // }); 
+    // 한꺼번에 이벤트가 있을 땐 한방에 처리를 한다. > 범용함수는 이게 가능하다. 모든 이벤트를 처리하는 공용함수디.
     // ★ 전용함수는 이방식이 안된다.
 
     // >> 매개변수로 객체를 잘받는다. 아까랑 동일하다. 
@@ -162,7 +165,7 @@
     // jQuery는 머머. 머머. 이렇게 코드가 길어지는 경우가 많다. 
 
 
-    jQuery('#btn4').off('mouseout'); // 이벤트를 제거하는 방법이다.
+    // jQuery('#btn4').off('mouseout'); // 이벤트를 제거하는 방법이다.
     // 당연히 on의 반댓말이라 -> 'off'
 
 
