--- a/src/main/webapp/jquery/ex18_chart.html
+++ b/src/main/webapp/jquery/ex18_chart.html
@@ -26,10 +26,11 @@
 
     <div id="chart"></div>
     
-    
+    <script type="text/javascript" src="test.js"></script>
     <script src="js/jquery-3.6.4.js"></script>
     <script src="js/highcharts.js"></script>
     <script>
+        alert(a);
         // 샘플예제 보고 우리쪽으로 적용해보고
         // 객체형태로 옵션을 준다.
         // 하나씩 바꿔본다. 
