--- a/src/main/webapp/jquery/ex20_map.html
+++ b/src/main/webapp/jquery/ex20_map.html
@@ -27,7 +27,7 @@
 
     <script src="js/data.js"></script>
     <script src="js/jquery-3.6.4.js"></script>
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey="></script>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=31ef66b24f93bbb959f9b59dc1f2b78a"></script>
     <script>
         
         const map = new kakao.maps.Map(document.getElementById('map'), {
