--- a/src/main/webapp/javascript/ex04.html
+++ b/src/main/webapp/javascript/ex04.html
@@ -96,7 +96,7 @@
         // - 자바와 동일
         console.log('C:\class\client\javascript'); // 에러는 안나는대 \ 이 사라진다. > 'C:classclientjavascript'이 나온다. 차라리 에러가 나는데 나음 
         console.log('C:\\class\\client\\javascript'); // 'C:\class\client\javascript'
-
+        // ★ console.log()에서도 이스케이프를 걸어줘라 
     </script>
 </body>
 </html>
