--- a/src/main/webapp/javascript/ex07.html
+++ b/src/main/webapp/javascript/ex07.html
@@ -57,7 +57,9 @@
         var age = '20';
         var age = 20;
         var age = '20세';
-
+        alert(age);
+        // isNaN 매개변수가 숫자인지 검사하는 함수이다.
+        // NaN : Not a Number라는 뜻 
         if(isNaN(age)){
             console.log('나이가 올바르지 않습니다.');
         } else {
