--- a/src/main/webapp/javascript/ex08_string.html
+++ b/src/main/webapp/javascript/ex08_string.html
@@ -42,7 +42,7 @@
         console.log(txt.replace('Hello', 'Hi'));
         console.log(txt.replace('Hong', 'Lee'));  // 두번쨰 홍은 안바꿔줘!
 
-        console.log(txt.replace(/Hong/g, 'Lee')); // 이렇게 하니까 앞의 홍도 뒤에 홍도 바뀐다.
+        console.log("check : "+txt.replace(/Hong/g, 'Lee')); // 이렇게 하니까 앞의 홍도 뒤에 홍도 바뀐다.
               // 이건 자바스크립트의 정규 표현식이다.
 
         // 6. 공백 제거
