--- a/src/main/webapp/javascript/ex19_location.html
+++ b/src/main/webapp/javascript/ex19_location.html
@@ -34,6 +34,7 @@
 
             window.location.href = 'ex19_location.html'; // 새로고침
             window.location.reload();
+            window.location.assign("http://google.com")
         }
         //
         // location.assign
