--- a/src/main/webapp/javascript/ex56_css.html
+++ b/src/main/webapp/javascript/ex56_css.html
@@ -39,6 +39,7 @@
                 x = event.offsetX; // 상자내에서 눌린 마우스 좌표
                 y = event.offsetY; // 상자내에서 눌린 마우스 좌표
                 // 처음 눌렸을 때 상자의 어느 부분에 눌렸는지 아는 거리다. 이걸 보정하려고 이제왼쪽 상단으로 보정한다.
+                console.log(event.offsetX +','+ event.offsetY)
             }
         }
         window.onmousemove = function() {
