--- a/src/main/webapp/javascript/ex66_css.html
+++ b/src/main/webapp/javascript/ex66_css.html
@@ -60,7 +60,7 @@
 
             //★★★★ getBoundingClientRect 이거이거 뭔지!
             let  y  =  document.getElementById('begin').getBoundingClientRect().top;
-
+            console.log(y);
             if( y < 0 && y >= -3000 ){
 
                 document.body.style.backgroundColor = 'black';
