--- a/src/main/webapp/javascript/ex03.html
+++ b/src/main/webapp/javascript/ex03.html
@@ -29,7 +29,7 @@
     <input type="text" size="50" name="txt1">
 
     <script>
-        // window.document.all.txt1.value = new Date();
+        window.document.all.txt1.value = new Date();
 
         // 자바스크립트 디버깅 > 값 확인
         // 1. alert(값);
