--- a/src/main/webapp/javascript/ex13_mouseevent.html
+++ b/src/main/webapp/javascript/ex13_mouseevent.html
@@ -77,6 +77,7 @@
        
        txt1.onmousedown = m3;
        function m3() {
+            console.log(event.screenX, event.screenY)
             // message('mousedown'); 
             // window.document.body.bgColor='tomato';
             // 마우스 버튼을 클릭하면 사건이 발생한다. 왼,오,우 버튼 다 해당된다.
