--- a/src/main/webapp/html/ex02.html
+++ b/src/main/webapp/html/ex02.html
@@ -36,8 +36,8 @@
 			- line break의 약자 break의 단어를 따옴 
 	 -->
 	
-	하나&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;둘
-	                            
+	하나&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;둘&amp;
+	           
 	셋
 	<br>	 
 	넷 
