--- a/src/main/webapp/html/ex15_table.html
+++ b/src/main/webapp/html/ex15_table.html
@@ -86,7 +86,7 @@
     <h1> 2행 2열 테이블 </h1>
     <table border="1" width="200" height="200">
         <tr> <!-- 9방향이 있다. -->
-            <td align="center" valign="bottom">1</td> 
+            <td align="center" valign="center">1</td> 
             <td>2</td>              
         </tr>
         <tr>
