--- a/src/main/webapp/html/ex19_form.html
+++ b/src/main/webapp/html/ex19_form.html
@@ -76,7 +76,7 @@
         - 단독 태그
         - input.type : 입력 컨트롤의 종류
         - input.name : 식별자
-        - input.id : 식별자. CSS/JavaScript에서 사용
+        - input.id   : 식별자. CSS/JavaScript에서 사용
         - input.class : 식별자. CSS/JavaScript에서 사용
         - input.size : 길이(문자 개수) > 이걸 키우면 텍스트박스 크기가 길어진다. 기본값이 아마도 20정도?
         - input.maxlength: 최대 입력 길이(문자수) 이거 5라고 설정하면 5글자보다 더 많이 못쓴다. 
@@ -94,7 +94,7 @@
     -->
     <form>
         텍스트박스(단일라인), 기본값은 type="text": Alt+S누르면 바로간다. accesskey <br>
-        <input type="text" name="txt1" id="txt1" class="txt" size="20" maxlength="5" value="홍길동" accesskey="s" autofocus autocomplete="on">
+        <input type="text" name="txt1" id="txt1" class="txt" size="20" maxlength="5" value="홍길동" accesskey="s" autofocus autocomplete="off">
         <hr>
         <!--
             암호상자, Masked Text Box
