--- a/src/main/webapp/html/ex10_list.html
+++ b/src/main/webapp/html/ex10_list.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        /* ol {
+        ol {
             list-style-type: none;
+            padding: 0px;
         }
         ol li {
             display: inline;
-        } */
+        }
     </style>
 </head>
 <body>
